<resources>
    <string name="app_name">Fi</string>
    <string name="s">S.</string>
    <string name="instruction">First of the few step to set you up with a Bank Account</string>
    <string name="enter_pan">Enter Pan</string>
    <string name="pan_number">PAN NUMBER</string>
    <string name="enter_date">03</string>
    <string name="enter_month">11</string>
    <string name="enter_year">1999</string>
    <string name="date_birth">DATE BIRTH</string>
    <string name="i_don_t_have_a_pan">I don\'t have a PAN</string>
    <string name="next">NEXT</string>
    <string name="pan_require_instruction">Providing PAN &amp; Date of Birth helps us find and fetch your KYC from a central registry by the Government of India. <font color="#FF6200EE">Learn more</font></string>
</resources>