<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.prashant.fi.MainActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s"
            android:textColor="#F43737"
            android:textSize="64sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvInstruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="start|center_vertical"
            android:text="@string/instruction"
            android:textColor="@color/colorDefaultText"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/tvPanNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:paddingVertical="5dp"
            android:text="@string/pan_number"
            android:textColor="@color/colorDefaultText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvInstruction" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/panLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@+id/tvPanNumber">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_pan"
                android:imeOptions="actionNext"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
                android:inputType="textCapCharacters"
                android:maxLength="10"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@={viewModel.pan}"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvBirthDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingVertical="5dp"
            android:text="@string/date_birth"
            android:textColor="@color/colorDefaultText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/panLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dateLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="80dp"
            android:layout_height="60dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toStartOf="@id/monthLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvBirthDate">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:hint="@string/enter_date"
                android:imeOptions="actionNext"
                android:inputType="numberSigned"
                android:maxLength="2"
                android:maxLines="1"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:singleLine="true"
                android:text="@={viewModel.date}"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/monthLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="80dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="10dp"
            app:hintEnabled="false"
            app:layout_constraintBottom_toBottomOf="@+id/dateLayout"
            app:layout_constraintEnd_toStartOf="@id/yearLayout"
            app:layout_constraintStart_toEndOf="@id/dateLayout"
            app:layout_constraintTop_toBottomOf="@+id/tvBirthDate">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMonth"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:hint="@string/enter_month"
                android:imeOptions="actionNext"
                android:inputType="numberSigned"
                android:maxLength="2"
                android:maxLines="1"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:text="@={viewModel.month}"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/yearLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="10dp"
            app:hintEnabled="false"
            app:layout_constraintBottom_toBottomOf="@+id/monthLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/monthLayout"
            app:layout_constraintTop_toBottomOf="@+id/tvBirthDate">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etYear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:hint="@string/enter_year"
                android:imeOptions="actionDone"
                android:inputType="numberSigned"
                android:maxLength="4"
                android:maxLines="1"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:text="@={viewModel.year}"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:textColor="@color/colorDefaultText"
            android:text="@string/pan_require_instruction"
            app:layout_constraintBottom_toTopOf="@+id/btnNext" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{viewModel::onClicks}"
            android:text="@string/next"
            app:layout_constraintBottom_toTopOf="@id/tvDontHavePan" />

        <TextView
            android:id="@+id/tvDontHavePan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{viewModel::onClicks}"
            android:padding="10dp"
            android:text="@string/i_don_t_have_a_pan"
            android:textColor="@color/purple_500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>